# weather-ensemble-forecaster

./: .env.example  .gitignore  README.md  check.py  pyproject.toml  requirements.txt
.github/workflows/: daily-collect.yml  deploy-pages.yml  tests.yml
data/: weather.db
legacy/: weather_ensemble_phase1_single_file.py
notebooks/: explore_database.ipynb  ml_model_comparison.ipynb
reports/: accuracy_report.html
scripts/: daily_run.sh
src/weather_ensemble/: __init__.py  backtest.py  cli.py  config.py  db.py  maintenance.py  ml.py  models.py  phases.py  report.py  retry.py  scoring.py  service.py
src/weather_ensemble/sources/: __init__.py  accuweather.py  bom.py  open_meteo.py  openweathermap.py  silo.py  visual_crossing.py  weatherapi.py  weatherbit.py  wttr.py
src/weather_ensemble_forecaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_actual_blend.py  test_backtest.py  test_blend_forecast.py  test_cli_resilience.py  test_maintenance.py  test_ml_prediction.py  test_open_meteo_models.py  test_provider_fallbacks.py  test_retry.py  test_scoring.py  test_scoring_accuracy.py
