[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-ensemble-forecaster"
version = "0.1.0"
description = "Collect, score, and blend weather forecasts from multiple sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.4.0",
    "pyarrow>=15.0.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
weather-ensemble = "weather_ensemble.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
